--- a/docs/zh/config/i18n.md
+++ b/docs/zh/config/i18n.md
@@ -3,8 +3,8 @@
 ## 示例代码
 
 ```typescript
-new AiEditor({
-    element: "#aiEditor",
+new JSTEditor({
+    element: "#JSTEditor",
     lang: "zh",
     i18n: {
         zh :{
@@ -24,15 +24,15 @@ new AiEditor({
 - **i18n**：自定义国际化配置。
 
 ::: warning 注意
-AiEditor 已经内置了关于 `zh`（中文）和 `en`（英文）的国际化内容，只需要配置 `lang` 即可，但可以通过 `i18n` 的配置覆盖掉内置的内容，或者添加额外的其他语言。
+JSTEditor 已经内置了关于 `zh`（中文）和 `en`（英文）的国际化内容，只需要配置 `lang` 即可，但可以通过 `i18n` 的配置覆盖掉内置的内容，或者添加额外的其他语言。
 :::
 
 ## 添加其他语言的支持
 
 
 ```typescript
-new AiEditor({
-    element: "#aiEditor",
+new JSTEditor({
+    element: "#JSTEditor",
     lang: "otherLang",
     i18n: {
         otherLang :{
@@ -46,8 +46,8 @@ new AiEditor({
 ## 切换语言
 
 ```typescript
-const aiEditor = new AiEditor({
-    element: "#aiEditor",
+const JSTEditor = new JSTEditor({
+    element: "#JSTEditor",
     lang: "zh",
     i18n: {
         zh :{
@@ -62,6 +62,6 @@ const aiEditor = new AiEditor({
 })
 
 //切换当前语言到英语
-aiEditor.changeLang("en")
+JSTEditor.changeLang("en")
 ```
 
